@@ -1,0 +1,2 @@
+* Credit to the jonpy (http://jonpy.sourceforge.net/) session module for the
+  session id/hash generation code. 
