@@ -2,19 +2,21 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: TODO,v 1.6 2004/11/18 16:53:17 port001 Exp $
+# $Id: TODO,v 1.7 2004/12/25 01:36:24 port001 Exp $
 
 
 Ian:
+* Rework the User module.
+
 * Consolidate the indexes into just the one (duplicate code = bad). (DONE)
 
 * Convert the admin site modules over to the new style.
 
 * Convert indexes into classes, perhaps. (DONE) 
 
-* Salt the MD5s
+* Salt the MD5s (INVALIDATED)
 
-* Sort out the SQL code
+* Sort out the SQL code (DONE)
 
 * Lots of other things I always forget when it comes to writing TODOs. 
 
