@@ -3,7 +3,7 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: State.py,v 1.3 2004/11/10 16:33:33 port001 Exp $
+# $Id: State.py,v 1.4 2004/12/25 01:36:24 port001 Exp $
 #
 
 __modulename__ = "State"
@@ -12,3 +12,5 @@ ActiveThreads = 0
 
 HTMLHeadersSent = False
 HeaderTmplSent = False
+
+ThisSession = None
