@@ -2,7 +2,12 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.33 2004/12/21 18:50:43 port001 Exp $
+# $Id: ChangeLog,v 1.34 2004/12/25 01:36:24 port001 Exp $
+
+24 Dec 2004; Ian Leitch <port001@gentoo.org>:
+ * Rewrote the Session module
+ * Converted index to use fastcgi
+   NOTE: This has broken most modules, though not hard to fix.
 
 21 Dec 2004; Ian Leitch <port001@gentoo.org>:
  * Small fixes
